# linux-system-mini-projects

./: README.md
docs/smartlog/: architecture.md
projects/sentinel/: Makefile  README.md
projects/sentinel/include/: sentinel.h
projects/sentinel/src/: main.c  supervisor.c
projects/smartlog/: CMakeLists.txt  README.md
projects/smartlog/include/smartlog/: config.h  smartlog_core.h  utils.h
projects/smartlog/src/: mini_log.c  smartlog_core.c  utils.c  utils.h
projects/smartlog/test/: test_smartlog.c
